# minecraft-clone

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
include/glad/: glad.h
include/glm/: CMakeCache.txt
res/: palette
scripts/: build.sh  debug.sh  rebuild.sh  run.sh
src/: Atlas.cpp  Atlas.hpp  Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  Engine.cpp  Engine.hpp  Player.cpp  Player.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  World.cpp  World.hpp  glad.c  main.cpp  pch.hpp  shader.frag  shader.vert  shader0.frag
src/Block/: Block.cpp  Block.hpp  BlockData.hpp  BlockTexture.hpp  BlockType.cpp  BlockType.hpp
src/Chunk/: Chunk.cpp  Chunk.hpp  ChunkContext.hpp  ChunkManager.cpp  ChunkManager.hpp  ChunkMesh.cpp  ChunkMesh.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp
src/Core/: Application.cpp  Application.hpp  Window.cpp  Window.hpp
src/Core/Player/: Camera.hpp  Player.cpp  Player.hpp
src/Input/: InputHandler.cpp
src/Math/: PerlinNoise.cpp  PerlinNoise.hpp  RayCast.cpp  RayCast.hpp
src/Player/: Camera.cpp  Camera.hpp  Player.cpp  Player.hpp
src/Shader/: Shader.cpp  Shader.hpp
src/Shader/GLSL/: Interface.vert  Lighting.frag  Lighting.vert  Textured.frag
src/Terrain/: Chunk.cpp  Chunk.hpp  Treeminator.hpp  World.cpp  World.hpp
src/Terrain/Block/: Block.cpp  BlockType.cpp  BlockType.hpp
src/Texture/: Atlas.cpp  Atlas.hpp  Texture.cpp  Texture.hpp
src/Utils/: HashFunctor.hpp  InputHandler.cpp  InputHandler.hpp  Serializer.hpp  ThreadPool.cpp  ThreadPool.hpp  Timer.cpp  Timer.hpp
src/Utils/Input/: InputHandler.hpp
src/World/: LightOrigin.cpp  LightOrigin.hpp  Terrain.cpp  Terrain.hpp  TerrainGenerator.cpp  TerrainGenerator.hpp  Treeminator.cpp  Treeminator.hpp  World.cpp  World.hpp
src/core/: Window.cpp  Window.hpp
src/core/player/: Camera.cpp  Camera.hpp  Player.cpp  Player.hpp
src/math/: PerlinNoise.hpp
src/objects/: Cube.cpp  Cube.hpp
src/shader/: Shader.cpp
src/shader/glsl/: Textured.frag  line.frag
src/shaders/: line.vert  shader.frag  shader.vert
src/terrain/: Chunk.cpp  Chunk.hpp  Treeminator.cpp  Treeminator.hpp  World.cpp  World.hpp
src/terrain/block/: Block.cpp  Block.hpp  BlockType.cpp  BlockType.hpp
src/texture/: Atlas.cpp  Atlas.hpp  Texture.cpp  Texture.hpp
